components/left-sidebar/server.css
.left-sidebar {
  position: sticky;
  top: var(--sticky-header-height);

  padding-bottom: 3rem;

  overflow-wrap: anywhere;

  h4 {
    margin: 0;
    font-size: var(--font-size-large);
    font-weight: normal;
  }

  ol {
    padding: 0;
    margin: 0;
    list-style: none;
  }

  details {
    width: 100%;

    &[open] {
      > summary {
        margin-bottom: 0.5rem;

        &::before {
          transform: rotate(90deg);
        }
      }
    }

    summary {
      display: flex;
      align-items: center;
      cursor: pointer;

      &::before {
        display: inline-block;

        flex-shrink: 0;

        width: 1rem;
        height: 1rem;

        margin: 0.25rem;

        content: "";

        background-color: currentcolor;

        mask-image: url("../icon/chevron-right.svg");
        mask-size: cover;
      }

      &:hover {
        background-color: var(--color-background-secondary);

        &:has(a:hover) {
          /* Don't highlight, as link click doesn't toggle. */
          background-color: unset;
        }
      }
    }
  }

  li {
    display: block;

    &:not(:last-child) {
      margin-bottom: 0.5rem;
    }

    &.section {
      font-weight: var(--font-weight-bold);

      &:not(:first-child) {
        margin-top: 1em;
      }
    }

    ol {
      padding-left: 1.5rem;
    }
  }

  a,
  span:not(.highlight-container) {
    display: inline-flex;
    padding-block: 0.25rem;
    vertical-align: middle;
  }

  a {
    color: var(--color-text-primary);

    &:hover {
      color: var(--color-area-link);
    }

    &:not(:hover) {
      text-decoration: none;
    }
  }

  code {
    font-family: var(--font-family-code);
    font-size: var(--font-size-normal);
  }

  em {
    display: block;

    padding-inline: 0.5rem;

    font-style: normal;

    background-color: var(--color-area-background);
    border-left: 2px solid var(--color-area-highlight-border);
  }

  .icon {
    margin-left: 0.5ch;
  }

  mark {
    /* Sidebar filter highlight */
    color: unset;
    background-color: var(--color-background-yellow);
  }
}

.left-sidebar__content {
  > ol {
    padding-left: 2px;
  }
}

.left-sidebar__header {
  position: sticky;
  top: 0;
  z-index: 1;

  padding-top: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 2rem;
  padding-left: 2px;

  background: linear-gradient(
    to bottom,
    var(--color-background-page) 0 calc(100% - 2rem),
    transparent 100%
  );
}

